--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -2,16 +2,47 @@ body{
 font-family: "Monaco", monospace;
 font-size:1.85rem;
 background-color: #fcd7ad;
-background-image: url(/client/Client/src/assets/imagenes/fondoprincipal.jpg)
+
 
 }
+
+.imagen_checked{
+  width:4rem;
+  height:4rem;
+  margin-top:2rem;
+}
+
+
+.imagen_signos
+{
+  width:4rem;
+  height:4rem;
+  margin-left:1rem;
+  margin-right:1rem;
+}
+
+.texto_blanco{
+  color:#fcd7ad;
+}
+
+
+
+
+.imagen_signos:hover{
+  transform: scale(1.1);
+  transition: .5s ease;
+}
+
 
 h1 {
   text-align: center;
   color: black; 
   margin: 0 0 40px;
 }
-
+.input_form{
+width: 80%;
+padding:0.5rem 1rem;
+}
 
 h5 {
   text-align: center;
@@ -121,18 +152,32 @@ p.normal {
   border: 5px solid white;
   background-color: rgba(178, 224, 109, 0.315);
   
-
-
   padding: 5rem 5rem 4rem 5rem;
 
 }
 
+.imagen_quienes{
+  opacity:0.7;
+  width:80rem;
+  height:80rem;
+  margin-top:-2rem;
+  border-radius: 2rem;
+  z-index: 0;
+  
+ 
+}
 
-.icono{
- 
-    height: 45px;
-    width: 45px;
- 
+.boton_sobre_quienes{
+  margin-top:-3rem;
+}
+.icono{ 
+    height: 2.5rem;
+    width: 2.5rem; 
+}
+
+.icono:hover{
+  transform: scale(1.5);
+  transition: .5s ease;
 }
 
 
@@ -148,11 +193,18 @@ p.normal {
   color:#82ddf0;
 
 }
+
+
+.boton_estandar2:hover{
+  background-color: white;
+  color:#82ddf0;
+}
 .boton_estandar{ 
-    display: block;
+ 
     width: 12rem !important;
+    opacity:0.85;
     height: 3rem;   
-    padding: 5px 10px;
+    padding: 0.1rem 0.5rem;
     background: scroll;
     background-image: none;
     background-color: #5296A5; 
@@ -160,10 +212,13 @@ p.normal {
     border-left: 1rem;
     border-right: 1rem;
     border-bottom: 1rem;    
-    color: #fcd7ad;
-    font-size:x-large !important;
-    border-radius: 13rem;
+    color: #faebd7;
+    font-size:large !important;
+    border-radius: 13rem !important;
     transition: all 0.5s ease;
+    margin-top: 0.5rem; 
+    margin-left:1rem;
+    margin-right: 1rem;
  
 }
 
@@ -220,11 +275,48 @@ body {
 }
 
 .imagen_producto{
-  width:300px;
-  height:300px;
+  width:19rem;
+  height:19rem;
   border-radius: 3rem;
 }
 
+
+.listado2{
+  opacity:0.75;
+
+margin-top: 0.5rem;
+margin-bottom: 0.5rem;
+margin-right: 1.5rem;
+margin-left: 1.5rem;
+background-color: #82ddf0;
+border-radius: 1rem;
+vertical-align: middle;
+ 
+}
+
+#tabla_detalle{
+  width:100% !important;
+  padding-top:0.0rem;
+  padding-right:0rem;
+  padding-left:0rem;
+  padding-bottom:0.5rem;
+  border-collapse: separate;
+  border-spacing: 50px 0;
+}
+.encabezado{
+  padding-top:0.1rem;
+  padding-right:0.4rem;
+  padding-left:0.4rem;
+  padding-bottom:0.1rem;
+margin-top: 0rem;
+margin-bottom: 0.5rem;
+margin-right: 0.5rem;
+margin-left: 0.5rem;
+background-color: antiquewhite;
+border-radius: 1.5rem;
+opacity:0.85;
+
+}
 
 .listado{
   padding-top:2.5rem;
@@ -237,15 +329,26 @@ margin-right: 0.5rem;
 margin-left: 3.5rem;
 background-color: antiquewhite;
 border-radius: 5rem;
+opacity:0.85;
 
 }
-
+.detalle_pedido{
+padding-top:2.5rem;
+padding-right:1rem;
+padding-left:2rem;
+padding-bottom:2.5rem;
+margin-top: 2rem;
+margin-bottom: 1rem;
+margin-right: 0.5rem;
+margin-left: 3.5rem;
+background-color: #82ddf0;
+border-radius: 5rem;
+}
 
 .texto_nombre{
   font-size: 2.5rem;
  text-align:center !important;
-  margin: 0;
- 
+  margin: 0; 
 }
 
 .texto_descripcion{
@@ -255,4 +358,101 @@ border-radius: 5rem;
 .center{
   text-align:center;
   vertical-align: bottom;
+}
+
+.popup{
+  opacity:0.5;
+  margin-top: 5rem;
+  text-align:center;
+}
+
+.middle{
+  vertical-align: middle;
+}
+
+.boton_estandar_imagen{
+  display: block;
+  width: 50rem !important;
+  height: 3rem;   
+  padding: 0.1rem 0.5rem;
+  background: scroll;
+  background-image: none;
+  background-color: #5296A5; 
+  border-top: 1rem;
+  border-left: 1rem;
+  border-right: 1rem;
+  border-bottom: 1rem;    
+  color: #faebd7;
+  font-size:x-large !important;
+  border-radius: 13rem;
+  transition: all 0.5s ease;
+  margin-top: 0.5rem;
+
+}
+
+.boton_estandar_2{
+  width: 12rem !important;
+  height: 3rem;   
+  padding: 0.1rem 0.1rem;
+  background: scroll;
+  background-image: none;
+  background-color: #5296A5; 
+  border-top: 1rem;
+  border-left: 1rem;
+  border-right: 1rem;
+  border-bottom: 1rem;    
+  color: #faebd7;
+  font-size:large !important;
+  border-radius: 13rem;
+  transition: all 0.5s ease;
+  margin-top: 0.0rem; 
+  margin-right:1rem;
+}
+#boton_estandar_admin{ 
+  width: 12rem !important;
+  height: 3rem;
+  padding: 0.1rem 0.1rem;
+  background: scroll;
+  background-image: none;
+  background-color: #5296A5; 
+  border-top: 1rem;
+  border-left: 1rem;
+  border-right: 1rem;
+  border-bottom: 1rem;    
+  color: #faebd7;
+  font-size:large !important;
+  border-radius: 13rem;
+  transition: all 0.5s ease;
+  margin-top: 1rem; 
+  margin-right:1rem;
+  position:sticky;
+  background-color: red;   
+}
+
+.margen-top
+{ 
+  margin-top:1.2rem; 
+}
+
+.margen-medio
+{ 
+  align-items: center;
+  justify-content: center;
+}
+
+.capa_opacidad_titulo{
+  opacity:0.80;
+}
+
+
+.centro_horizontal{
+  position: relative;
+  left: 50%;
+}
+
+.imagen_lateral{
+  width: 22rem;
+  height:42rem;
+  border-radius: 3rem;
+  opacity:0.8;
 }
