--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -340,7 +340,7 @@ vertical-align: middle;
   padding-top:0.1rem;
   padding-right:0.4rem;
   padding-left:0.4rem;
-  padding-bottom:0.1rem;
+  padding-bottom:0.5em;
   margin-top: 0.0rem;
   margin-bottom: 01.5rem;
   margin-right: 0.5rem;
