--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -245,8 +245,7 @@ p.normal {
     transition: all 0.5s ease;
     margin-top: 0.5rem; 
     margin-left:1rem;
-    margin-right: 1rem;
- 
+    margin-right: 1rem; 
 }
 
 
@@ -283,16 +282,21 @@ html {
   position: relative;
 }
 
-footer {
-  width: 100%;
-  height: 81px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
+
 
 body {
-  margin: 0;
+  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer {
+  width: 100%;
+  position: fixed; 
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 8rem;
  
 }
 
@@ -353,14 +357,11 @@ align-items: center;
 }
 
 .contenido_header{ 
- 
   align-content: center !important;
   align-items: center !important;;
   text-align:center !important;;
-  vertical-align: bottom;
-  
-  padding-top:1rem;
-   
+  vertical-align: bottom;  
+  padding-top:1rem;   
   opacity:0.98;
   background-clip: padding-box;
 }
@@ -472,16 +473,13 @@ border-radius: 5rem;
   transition: all 0.5s ease;
   margin-top: 0.0rem; 
   margin-right:1rem;
+  padding-bottom: 0rem  !important;
 }
 #boton_estandar_admin{ 
   width: 8rem !important;
   height: 3rem;
-  
-
   padding-top:0rem;
-  padding-bottom: 0rem;
- 
-   
+  padding-bottom: 0rem  !important;    
   padding-right: 0rem;
   background: scroll;
   background-image: none;
